# Punt_Data_Lake

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  c_tmp_presupuesto.html  docker-compose.yml  pyproject.toml  requirements.md  requirements.txt
.github/ISSUE_TEMPLATE/: dba-review.yml
Pesupuestos/: Presupuesto_NEW.md  Presupuesto_OLD.md
consultas_SQL/: hu_estructura.md  hu_estructura.sql  v_hu_raw.md  v_hu_raw.sql
consultas_SQL/inspect/: README.md
consultas_SQL/inspect/profile/: column.md  column.sql  dates.md  dates.sql  text.md  text.sql
consultas_SQL/inspect/quality/: duplicates.md  duplicates.sql  nulls.md  nulls.sql  orphans.md  orphans.sql
consultas_SQL/inspect/schema/: columns.md  columns.sql  fks.md  fks.sql  odoo_models.md  odoo_models.sql  tables.md  tables.sql
database/sql/experiments/: embedding_benchmark_tables.md  embedding_benchmark_tables.sql
database/sql/views/: hu_estructura.sql  v_hu_raw.sql
database/sql/warehouse/: warehouse_hu_v1.sql  warehouse_hu_v1_load.sql  warehouse_hu_v1_load_incremental.sql
doc/: HU_v1_decisiones.md
doc/architecture/: README_SQL_HU.md
doc/views/: v_hu_raw.md
doc/warehouse/: HU_base_layer_overview.md  hu_etl_v1.md  warehouse_hu_v1.md
etl/: embedding_benchmark.py  hu_etl_v1.py
scripts/: bootstrap_venv.ps1
src/puntdl_inspect/: __init__.py  cli.py  db.py  formats.py  runner.py
