[project]
name = "puntdl-inspect"
version = "0.1.0"
description = "Toolkit read-only de inspección de la BBDD Odoo del Punt Data Lake"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pandas>=2.2",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
]

[project.scripts]
puntdl = "puntdl_inspect.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"puntdl_inspect" = ["py.typed"]
